# rdkb-notify_comp

notify_comp/: CONTRIBUTING.md  Makefile  Makefile.orig  NOTICE  configure.ac
notify_comp/arch/intel_usg/boards/rdkb_arm/config/comcast/: NotifyComponent.xml
notify_comp/scripts/: NotifyComponent.xml
notify_comp/source/: Makefile  Makefile.am
notify_comp/source/NotifyComponent/: Makefile  Makefile.am  cosa_apis_NotifyComponent.c  cosa_apis_NotifyComponent.h  cosa_notify_wrapper.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
notify_comp/source/test/: Makefile.am  gtest_main.cpp  notify_compTest.cpp
